--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   </body>
   <div class="container"/>
-  <h1>Cuistoche </h1>
+  <h1>Cuistoche avec la tru</h1>
   <script src="script.js"></script>
 </html>
